--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# Файл docker-compose.yml
-
 version: '3'
 
 volumes:
@@ -17,11 +15,17 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
+
   frontend:
     env_file: .env
     build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static
+
   gateway:
     build: ./gateway/
+    env_file: .env
     volumes:
       - static:/staticfiles/
     ports:
