--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install flake8==6.0.0 flake8-isort==6.0.0
+        pip install -r ./backend/requirements.txt
     # Запускаем flake8
     - name: Test with flake8
       # Вызываем flake8 и указываем ему,
