--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2-binary = "2.9.3"
 ruff = "^0.1.9"
 flake8 = "6.0.0"
 flake8-isort = "6.0.0"
+black = "^23.12.1"
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
