--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -181,4 +181,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой Taski успешно выполнен!
+        message: Деплой Tasks успешно выполнен!
