Check now with more secrets from the .env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: kirkoov/taski_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -108,7 +108,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: kirkoov/taski_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_frontend:latest
 
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -128,7 +128,7 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          tags: kirkoov/taski_gateway:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_gateway:latest
 
   deploy:
     runs-on: ubuntu-latest
