--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,18 +11,18 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: kirkoov/taski_backend
+    image: ${DOCKER_USERNAME}/taski_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: kirkoov/taski_frontend
+    image: ${DOCKER_USERNAME}/taski_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: kirkoov/taski_gateway
+    image: ${DOCKER_USERNAME}/taski_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
