--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,7 +139,8 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-        password: ${{ secrets.SSH_PASSPHRASE }}
+        password: ${{ secrets.SSH_PWD }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
         source: "docker-compose.production.yml"
         target: "taski"
     - name: Executing remote ssh commands to deploy
@@ -148,7 +149,8 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-        password: ${{ secrets.SSH_PASSPHRASE }}
+        password: ${{ secrets.SSH_PWD }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd taski
           sudo docker compose -f docker-compose.production.yml pull
