--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,9 @@
-Django==3.2.16
-djangorestframework==3.12.4
-django-cors-headers==3.13.0
-psycopg2-binary==2.9.3
+asgiref==3.7.2 
+django-cors-headers==3.13.0 
+django==3.2.16 
+djangorestframework==3.12.4 
+psycopg2-binary==2.9.3 
+python-dotenv==1.0.0 
+pytz==2023.3.post1 
+sqlparse==0.4.4 
+typing-extensions==4.9.0 
