--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "3.2.16"
 djangorestframework = "3.12.4"
 django-cors-headers = "3.13.0"
 psycopg2-binary = "2.9.3"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
