--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,22 +7,26 @@ volumes:
 services:
   db:
     image: postgres:13.10
+    restart: always
     env_file: .env
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
     image: ${DOCKER_USERNAME}/taski_backend
+    restart: always
     env_file: .env
     volumes:
       - static_volume:/backend_static
   frontend:
     image: ${DOCKER_USERNAME}/taski_frontend
+    restart: always
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
     image: ${DOCKER_USERNAME}/taski_gateway
+    restart: always
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
