--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,21 @@
-asgiref==3.7.2 
+asgiref==3.10.0 
+certifi==2025.11.12 
+charset-normalizer==3.4.4 
 django-cors-headers==3.13.0 
+django-stubs-ext==5.1.3 
+django-stubs==4.2.7 
 django==3.2.16 
+djangorestframework-stubs==3.14.5 
 djangorestframework==3.12.4 
+idna==3.11 
 psycopg2-binary==2.9.3 
-python-dotenv==1.0.0 
-pytz==2023.3.post1 
-sqlparse==0.4.4 
-typing-extensions==4.9.0 
+python-dotenv==1.2.1 
+pytz==2025.2 
+requests==2.32.5 
+sqlparse==0.5.3 
+tomli==2.3.0 
+types-pytz==2025.2.0.20251108 
+types-pyyaml==6.0.12.20250915 
+types-requests==2.32.4.20250913 
+typing-extensions==4.15.0 
+urllib3==2.5.0 
