--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Docker automatization sample."
 authors = ["Your Name <you@example.com>"]
 license = "MIT"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9.10"
@@ -18,11 +19,9 @@ django-stubs = "^4.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.1.9"
 flake8 = "6.0.0"
-flake8-isort = "6.0.0"
-black = "^23.12.1"
-mypy = "^1.8.0"
+mypy = "^1.18.2"
+ruff = "^0.14.4"
 
 [tool.isort]
 profile = "black"
